crates/loom/tests/snapshots/cli_help__loom_inbox_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"inbox\"])"
---
Human decision and diagnostic queue

Usage: loom inbox [OPTIONS] [COMMAND]

Commands:
  list  List pending human-decision and diagnostic items.
  view  Render one item host-side.
  chat  Launch interactive agent-assisted resolution.
  help  Print this message or the help of the given subcommand(s)

Options:
  -s, --spec <LABEL>      Filter queue entries to a spec label
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
      --host-key          Explicitly allow ambient host Git credentials and signing config
  -k, --kind <KIND>       Filter queue entries by kind [possible values: clarify, blocked, infra, tune]
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi, direct]
  -h, --help              Print help
