crates/loom/tests/snapshots/cli_help__loom_init_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
assertion_line: 119
expression: "loom_help(&[\"init\"])"
---
Initialize the workspace (create `.loom/` config + cache DB)

Usage: loom init [OPTIONS]

Options:
      --rebuild           Drop and repopulate the cache DB from `specs/*.md` and active beads
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi, direct]
  -h, --help              Print help
