crates/loom/tests/snapshots/cli_help__loom_loop_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
assertion_line: 149
expression: "loom_help(&[\"run\"])"
---
Loom harness CLI

Usage: loom [OPTIONS] <COMMAND>

Workflow:
  plan    Interactive spec interview with optional initial anchors
  todo    Decompose every touched spec into beads (multi-spec fan-out)
  loop    Per-bead execution loop. Continuous by default; `--once` exits after one bead
  gate    Quality gate — annotation-dispatched verifiers and LLM rubric
  msg     Resolve outstanding `loom:clarify` and `loom:blocked` beads

Inspection:
  status  Print cache health and work-epic status
  logs    Render (or tail) the most recent per-bead JSONL log
  spec    Inspect spec annotations and tooling dependencies

State:
  init    Initialize the workspace (create `.loom/` config + cache DB)
  use     Validate that a spec label exists in the cache
  note    Manage notes for a spec

  help    Print this message or the help of the given subcommand(s)

Options:
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi, direct]
  -h, --help              Print help
  -V, --version           Print version
