crates/loom/tests/snapshots/cli_help__loom_note_clear_help_snapshot.snap
---
source: crates/loom/tests/cli_help.rs
expression: "loom_help(&[\"note\", \"clear\"])"
---
Delete notes for the spec

Usage: loom note clear [OPTIONS] <LABEL>

Arguments:
  <LABEL>  Spec label

Options:
      --kind <KIND>       Note kind [default: implementation]
  -w, --workspace <PATH>  Workspace root. Defaults to the current working directory
  -A, --agent <BACKEND>   Override the agent backend for this invocation [possible values: claude, pi, direct]
      --all-kinds         Clear notes across every kind
  -h, --help              Print help
